# weather_rs

./: Cargo.toml  LICENSE  build.rs
src/: constants.rs  main.rs
