[package]
name = "weather_app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fltk = { version = "1.5.1", features = ["fltk-bundled"] }
fltk-theme = "0.7.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
serde_json = "1.0.118"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
